--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,13 @@ target_link_libraries(
     test_pdf_page
     PRIVATE client 
 )
+
+add_executable(
+    test_json
+    test_json.cpp
+)
+
+target_link_libraries(
+    test_json
+    PRIVATE jsoncpp_static
+)
