--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory("server")
 add_subdirectory("client")
-add_subdirectory("tests")
+# add_subdirectory("tests")
