--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -19,7 +19,12 @@ endif ()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(${PROJECT_NAME} main.cc)
+if(MSVC)
+    # enable only for windows!
+    add_executable(${PROJECT_NAME} main.cc "duck.rc")
+else()
+    add_executable(${PROJECT_NAME} main.cc)
+endif()
 
 # ##############################################################################
 # If you include the drogon source code locally in your project, use this method
